namespace java com.ishangke.edunav.commoncontract.model

struct CourseTemplateBo {
    1: i32 id
    2: string name
}

struct CommentCourseTemplateApproveBo {
    1: i32 id
    2: string comment
}

struct CommentCourseTemplateRejectBo {
    1: i32 id
    2: string comment
}

